tools/tests/errors/finally_nested_catch_span.experr
:6:9: error: uncaught exception: original-error
